--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
     <uses-permission android:name="android.permission.BODY_SENSORS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
+
+    <uses-sdk android:minSdkVersion="10"
+        android:targetSdkVersion="25"/>
+
+
     <application
         android:name=".MainActivity"
         android:allowBackup="false"
