--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service android:name="me.connectedspace.accelerometer.AccelerometerLogService">
+        </service>
     </application>
 
 </manifest>
