--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".MainActivity">
+        <activity android:name="me.connectedspace.accelerometer.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
