--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <uses-permission android:name="android.permission.BODY_SENSORS"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
 
     <uses-sdk android:minSdkVersion="10"
@@ -25,12 +26,12 @@
         <activity android:name="me.connectedspace.accelerometer.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <service android:name="me.connectedspace.accelerometer.AccelerometerLogService">
+        <service android:name="me.connectedspace.accelerometer.AccelerometerLogService"
+                 >
         </service>
     </application>
 
