--- a/main/AndroidManifest.xml
+++ b/main/AndroidManifest.xml
@@ -11,17 +11,17 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <uses-sdk android:minSdkVersion="10"
+    <uses-sdk android:minSdkVersion="14"
         android:targetSdkVersion="25"/>
 
 
     <application
-        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:allowBackup="false">
 
         <activity android:name="me.connectedspace.accelerometer.MainActivity">
             <intent-filter>
